Fix double border at the bottom of tables.

--- a/src/app/shared/components/table/hephaestus-table/hephaestus-table.component.scss
+++ b/src/app/shared/components/table/hephaestus-table/hephaestus-table.component.scss
@@ -33,6 +33,7 @@
   max-width: 100%;
   min-height: 100%;
   border: solid 1px #ccc;
+  border-bottom: none;
   display: block;
   background-color: white;
   overflow: hidden;
